[gd_scene load_steps=20 format=2]

[ext_resource path="res://Background/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/gui/png/1.png" type="Texture" id=2]
[ext_resource path="res://Fuentes/CHERI___.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Fuentes/CHERL___.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://assets/gui/botones/boton_lechuga.png" type="Texture" id=5]
[ext_resource path="res://Fuentes/Bacarde/barcadbold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/gui/botones/boton_Verde.png" type="Texture" id=7]
[ext_resource path="res://assets/gui/botones/reiniciar_azul.png" type="Texture" id=8]
[ext_resource path="res://assets/gui/botones/reiniciar_rojo.png" type="Texture" id=9]
[ext_resource path="res://assets/gui/botones/menu_rojo.png" type="Texture" id=10]
[ext_resource path="res://assets/gui/botones/menu_verde.png" type="Texture" id=11]
[ext_resource path="res://assets/gui/botones/menu_azul.png" type="Texture" id=12]
[ext_resource path="res://assets/gui/botones/reiniciar_verde.png" type="Texture" id=13]
[ext_resource path="res://assets/gui/botones/boton_rojo.png" type="Texture" id=14]
[ext_resource path="res://GUI/gui_pantallas/cambio_escenario.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=1]
size = 43
outline_color = Color( 0.85098, 0.752941, 0.752941, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 3
outline_color = Color( 0.482353, 0.121569, 0.121569, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 27
outline_size = 1
outline_color = Color( 0.0627451, 0.054902, 0.12549, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 79
font_data = ExtResource( 3 )

[node name="cambio_escenario" type="Node2D"]
script = ExtResource( 15 )

[node name="background" parent="." instance=ExtResource( 1 )]
position = Vector2( 137, 49 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 517, 288 )
scale = Vector2( 0.78961, 0.703226 )
texture = ExtResource( 2 )

[node name="atencion" type="Label" parent="Sprite"]
anchor_left = 0.275
anchor_top = 0.016
anchor_right = 0.69
anchor_bottom = 0.185
margin_left = -371.75
margin_top = -309.92
margin_right = -372.3
margin_bottom = -309.7
custom_fonts/font = SubResource( 1 )
text = "¡¡¡ CONTINUA CON 
LA AVENTURA !!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="puntaje" type="Label" parent="."]
margin_left = 279.21
margin_top = 215.161
margin_right = 404.21
margin_bottom = 249.161
custom_fonts/font = SubResource( 2 )
text = "Puntaje : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preguntas_correctas" type="Label" parent="."]
margin_left = 275.553
margin_top = 311.366
margin_right = 560.553
margin_bottom = 345.366
custom_fonts/font = SubResource( 2 )
text = "Preguntas correctas : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="puntaje_max" type="Label" parent="."]
margin_left = 274.139
margin_top = 261.609
margin_right = 551.139
margin_bottom = 295.609
custom_fonts/font = SubResource( 2 )
text = "mejor puntaje : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_score" type="Label" parent="."]
margin_left = 593.325
margin_top = 209.287
margin_right = 689.325
margin_bottom = 241.287
rect_scale = Vector2( 1.28, 1.16 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.333333, 0.384314, 0.729412, 1 )
text = "(12345)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_best" type="Label" parent="."]
margin_left = 595.044
margin_top = 251.149
margin_right = 680.044
margin_bottom = 283.149
rect_scale = Vector2( 1.32527, 1.34835 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0470588, 0.505882, 0.0627451, 1 )
text = "(50)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_preg" type="Label" parent="."]
margin_left = 597.044
margin_top = 302.319
margin_right = 682.044
margin_bottom = 334.319
rect_scale = Vector2( 1.36419, 1.55096 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.364706, 0.0705882, 0.619608, 1 )
text = "(50)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuar" type="TextureButton" parent="."]
anchor_right = 0.5
margin_left = 413.751
margin_top = 353.418
margin_right = 833.751
margin_bottom = 527.418
rect_scale = Vector2( 0.445067, 0.336176 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuar" type="Label" parent="continuar"]
margin_left = 9.57757
margin_top = 33.5611
margin_right = 129.578
margin_bottom = 62.5611
custom_fonts/font = SubResource( 4 )
text = "CONTINUAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="TextureButton" parent="."]
margin_left = 326.683
margin_top = 421.436
margin_right = 505.683
margin_bottom = 601.436
rect_scale = Vector2( 0.56, 0.52 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reiniciar" type="TextureButton" parent="."]
margin_left = 610.94
margin_top = 418.607
margin_right = 794.94
margin_bottom = 603.607
rect_scale = Vector2( 0.531634, 0.514354 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="reiniciar" to="." method="_on_reiniciar_pressed"]
